# dbbeagle

./: CMakeLists.txt  ProjectHome.md
src/: DBBeagle.pro  appaboutdialog.cpp  appaboutdialog.h  appaboutdialog.ui  dbbeagle.qrc  dbbeagle_ru.ts  dbbeagleapplication.cpp  dbbeagleapplication.h  dbconnectiondialog.cpp  dbconnectiondialog.h  dbconnectiondialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  sqldialectadaptor.h  version.h.cmake.in  version.h.in
src/adaptors/: mysqldialectadaptor.cpp  mysqldialectadaptor.h  orasqldialectadaptor.cpp  orasqldialectadaptor.h
src/icons/: icon.icns  make_icns.sh  make_iconset.sh
